# teapuretcl

./: Makefile.in  configure  configure.ac  helper.tcl  pkgIndex.tcl.in  sample.tcl
tclconfig/: tcl.m4
tests/: sample.test
